--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body background="https://s2.loli.net/2021/12/05/z9cVR4m2EFbpT17.jpg">
 
 <body>
-		<p对齐="中心"><b>y<href ="https://zflearn.00wr.cn/yuwen002.pptx">https://zflearn.00wr.cn/yuwen002.pptx</a></b></课件忆读书>
-<table border="0" width="100%">
+<a href="https://zflearn.00wr.cn/yuwen002.pptx">下载智飞黑客模拟器（*64版)
 	<tr>
 		<td colspan="2">
 		<h1 align="center"><font color="#000000">&nbsp;</font></h1>
