--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body background="https://s2.loli.net/2021/12/05/z9cVR4m2EFbpT17.jpg">
 
 <body>
-<a href="https://zflearn.00wr.cn/yuwen002.pptx">下载忆读书课件
+<a href="https://zflearn.00wr.cn/download/yuwen002.pptx">下载忆读书课件
 	<tr>
 		<br>
 		<br>
